# tether

./: .gitignore  .pre-commit-config.yaml  ISSUES.md  MACOS.md  README.md  dependencies.sh  phexif.py  pyproject.toml  rawconverter.py  requirements.txt  setup.cfg  tether.py
camera/: __init__.py  camera.py  cameradriver.py  errors.py  gphoto2driver.py  settings.py
camera/util/: notify.py  optionlistmodel.py
photosuite/camera/: __init__.py  camera.py  errors.py  gphoto2driver.py
photosuite/camera/util/: notify.py  optionlistmodel.py
photosuite/tether/: __main__.py
photosuite/ui/: __init__.py  cameracontrolbox.py  listcombobox.py  optionselector.py
photosuite/util/: formatter.py  phexif.py
ui/: __init__.py  cameracontrolbox.py  camerasettingbox.py  captureframe.py  filenametemplatedialog.py  functions.py  listcombobox.py  optionselector.py
util/: __init__.py  formatter.py  optionlistmodel.py
utils/: dependencies.sh  image_monitor.py
