# This file is part of tether
#
# Copyright (C) 2019 Rafael Guterres Jeffman
#
# This software is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This software is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this software.  If not, see <https://www.gnu.org/licenses/>.

[metadata]
name = tether
version = 0.2.0
author = Rafael Guterres Jeffman
author-email = rafasgj@gmail.com
home-page = https://github.com/rafasgj/tether
url = https://github.com/rafasgj/tether
description = A GTK+ interface for controling cameras with libgphoto2.
long-description = file: README.md
long-description-content-type = text/markdown
license = GPLv3
license_files = COPYING
platform = any
keywords = ['CLI', 'Development Tool']
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
project_urls =
    Bug Tracker = https://github.com/rafasgj/tether/issues
    Changelog = https://github.com/rafasgj/tether/releases/latest

[options]
zip_safe = False
include_package_data = True
packages = find:
# install_requires =
test_require =
    pytest
    coverage

# [options.package_data]

[options.extras_require]
deps =
    gphoto2 >= 2.0.0
    rawpy >= 0.13.1
    pillow >= 6.1.0
    python-magic >= 0.4.15
    pygobject >= 3.32.2
dev =
    %(lint)s
    %(deps)s
    setuptools > 50.0
test =
    %(lint)s
    %(deps)s
    pytest
    coverage
lint =
    black
    flake8
    pylint == 2.11.1
    pydocstyle
release =
    setuptools > 50.0
    twine

[bdist_wheel]
universal = true

[check]
metadata = true
strict = true

[sdist]
formats = gztar

# Tools

[coverage:run]
omit =
    .tox/*
    .venv/*
    /usr/*
    tests/*
    features/*
    */.local/*

[coverage:report]
show_missing = true
skip_covered = true
skip_empty = true
exclude_lines =
    pragma: no cover
    if False

[pydocstyle]
match-dir = (?!tests)(?!resources)(?!docs)[^\.].*
match = (?!test)(?!setup)[^\._].*\.py
inherit = false
ignore = D203, D212

[flake8]
max-line-length = 80
doctests = True
max-complexity = 10
extend-ignore = E203, W503
exclude =
    .tox
    .venv
    .git
    .eggs
    __pycache__
    docs
    build
    dist

[pylint]
max-nested-blocks = 5
ignored-modules = behave
max-line-length = 80
load-plugins = pylint.extensions.mccabe
max-complexity = 10

[pylint.TYPECHECK]
# This will make pylint ignore 'no-member' in these classes/packages.
generated-members = gi.*, Gtk.*, Gdk.*, GdkPixbuf.*, rawpy.*, gphoto2.*

[pylint.SIMILARITIES]
min-similarity-lines=6
ignore-comments=yes
ignore-docstrings=yes
ignore-imports=no

[gh-actions]
python =
    3.7: py37
    3.8: py38
    3.9: py39
    3.10: py310

[tox:tox]
envlist = {py37,py38,py39}-{linux,macos}
skipsdist = True
skip_missing_interpreters = True

[testenv]
platform = linux: linux
           macos: darwin
deps = -r requirements.txt
commands =
    {envpython} -m pip install pip --upgrade
    {envpython} -m pip install -e .[lint]
    black --check .
    flake8 .
    pydocstyle .
    pylint photosuite rawconverter.py setup.py
    # {envpython} -m pip install -e .[test]
    # coverage run -m behave
    # coverage report
